--- a/package.json
+++ b/package.json
@@ -10,19 +10,44 @@
     "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^5.1.1",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.4",
+    "@supabase/supabase-js": "^2.32.0",
     "@t3-oss/env-nextjs": "^0.3.1",
-    "@tanstack/react-query": "^4.29.25",
-    "@trpc/client": "^10.34.0",
-    "@trpc/next": "^10.34.0",
-    "@trpc/react-query": "^10.34.0",
-    "@trpc/server": "^10.34.0",
+    "@tanstack/react-query": "^4.29.7",
+    "@trpc/client": "^10.26.0",
+    "@trpc/next": "^10.26.0",
+    "@trpc/react-query": "^10.26.0",
+    "@trpc/server": "^10.26.0",
+    "agora-chat": "^1.1.0",
+    "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "formidable": "^3.5.0",
+    "framer-motion": "^10.15.1",
+    "immer": "^10.0.2",
+    "lucide-react": "^0.265.0",
     "next": "^13.4.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "superjson": "^1.13.1",
-    "zod": "^3.21.4"
+    "nextjs-cors": "^2.1.2",
+    "nextjs-progressbar": "^0.0.16",
+    "react": "^18.2.0",
+    "react-calendly": "^4.1.1",
+    "react-dom": "^18.2.0",
+    "react-spinners": "^0.13.8",
+    "sharp": "^0.32.5",
+    "superjson": "1.12.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.37.0",
